ubuntu-release-upgrader (1:19.04.7) UNRELEASED; urgency=medium

  * DistUpgrade/DistUpgradeCache.py: When calculating free space needed for
    mount points don't use a negative number as the buffer. (LP: #1786484)
  * fix more typos re RELEASE_UPRADER_ALLOW_THIRD_PARTY

 -- Brian Murray <brian@ubuntu.com>  Wed, 28 Nov 2018 14:11:10 -0800

ubuntu-release-upgrader (1:19.04.6) disco; urgency=medium

  * data/release-upgrades: Clarify documentation regarding the behavior for
    different Prompt settings. (LP: #1795024)
  * do-release-upgrade: Utilize information regarding what Prompt is set to so
    that a more informative error message can be displayed.
    (LP: #1798618, LP: #1795024)

 -- Brian Murray <brian@ubuntu.com>  Wed, 28 Nov 2018 10:02:43 -0800

ubuntu-release-upgrader (1:19.04.5) disco; urgency=medium

  * Remove the unused computer janitor code thereby resolving a Traceback that
    occurs when importing it. (LP: #1805475)

 -- Brian Murray <brian@ubuntu.com>  Tue, 27 Nov 2018 09:17:35 -0800

ubuntu-release-upgrader (1:19.04.4) disco; urgency=medium

  * Set icon_name in the dialogs so that there will be an icon in gnome-shell.
    (LP: #1797384)

 -- Brian Murray <brian@ubuntu.com>  Wed, 07 Nov 2018 15:55:25 -0800

ubuntu-release-upgrader (1:19.04.3) disco; urgency=medium

  * Remove lubuntu-core as a supported metapackage and a dependency of
    lubuntu-desktop.

 -- Simon Quigley <tsimonq2@ubuntu.com>  Fri, 02 Nov 2018 17:39:26 -0500

ubuntu-release-upgrader (1:19.04.2) disco; urgency=medium

  * Dual-sign release-upgrader tarballs with both 2012 & 2018 archive
    keys.
  * Update mirrors.

 -- Dimitri John Ledkov <xnox@ubuntu.com>  Fri, 02 Nov 2018 14:09:11 +0000

ubuntu-release-upgrader (1:19.04.1) disco; urgency=medium

  * DistUpgrade/{EOL,Devel}ReleaseAnnouncement,
    DistUpgrade/window_main.ui,
    data/gtkbuilder/DistUpgrade.ui,
    data/DistUpgrade.cfg,
    pre-build.sh:
    - updated for 18.10 -> 19.04