@@ -3,8 +3,17 @@ ubuntu-release-upgrader (1:19.04.7) UNRELEASED; urgency=medium
   * DistUpgrade/DistUpgradeCache.py: When calculating free space needed for
     mount points don't use a negative number as the buffer. (LP: #1786484)
   * fix more typos re RELEASE_UPRADER_ALLOW_THIRD_PARTY
+  * DistUpgrade/DistUpgradeController.py: When rewriting sources.list entries
+    check to see if the source provides packages for the release to which the
+    upgrade is occurring. If it isn't the entry is disabled thereby improving
+    upgrades with PPAs. (LP: #1807043)
+  * do-release-upgrade: add a parameter to allow third party mirrors and
+    repositories, additionally pass along the environmental variable
+    RELEASE_UPGRADER_ALLOW_THIRD_PARTY via pkexec and sudo. (LP: #1807032)
+  * DistUpgrade/DistUpgradeCache.py: improve messaging regarding failures to
+    calculate the upgrade and suggest using ppa-purge if PPAs are an issue.
 
- -- Brian Murray <brian@ubuntu.com>  Wed, 28 Nov 2018 14:11:10 -0800
+ -- Brian Murray <brian@ubuntu.com>  Thu, 06 Dec 2018 12:33:06 -0800
 
 ubuntu-release-upgrader (1:19.04.6) disco; urgency=medium
 
